crates/general/fixtures/invalid/record_pattern_missing_semicolon.zt
-- Record pattern fields require semicolon terminators.

Shape :: type {
  #circle: { radius: Int; };
}

area :: Shape -> Int
  = #circle { radius = r } => r;

area #circle { radius = 1; }
